deploy: 113e99fe327496c24123be2b298d0ea780d3dc51

--- a/md_README.html
+++ b/md_README.html
@@ -88,7 +88,7 @@ cd ..
 catkin_make
 </pre><p> As this pack can be used either on quad or on turtlebot by remapping the topics, the user can also install the <a href="http://wiki.ros.org/kobuki/Tutorials/Installation">kobuki packages</a> if he wants to use it directly on turtlebot.</p>
 <p><a class="anchor" id="ROS_Topics_and_Messages"></a></p>
-<h1>** ROS Topics and Messages ** </h1>
+<h1><b>ROS Topics and Messages</b> </h1>
 <h2>Subscribed Topics</h2>
 <table class="markdownTable">
 <tr class="markdownTableHead">
